syntax="proto3";

package downloadFile;

option go_package = "/proto";

service FileDownloadService {
    rpc CreateFolder(FileRequest) returns (FileResponse);
}

message FileRequest {
    string ProjectId = 1;
    string AppName = 2;
}

message FileResponse {
    repeated string files_downloaded = 1;
    string error = 2;
}